refactor main layout from grid to container with max width and auto margin

--- a/index.html
+++ b/index.html
@@ -2,177 +2,177 @@
 <html lang="sl">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<meta property="og:title" content="Tek treh vrhov"/>
-	<meta property="og:image" content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg"/>
-	<meta property="og:url" content="https://tektrehvrhov.si" />
-	<title>Tek treh vrhov 2020</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
+  <meta name="description"
+    content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+  <meta property="og:title" content="Tek treh vrhov" />
+  <meta property="og:image" content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg" />
+  <meta property="og:url" content="https://tektrehvrhov.si" />
+  <title>Tek treh vrhov 2020</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/" id="logo">T3V</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
 
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
 
-			<ul class="menu-content">
-				<li><a href="sl/info" class="menu-link">Info</a></li>
-				<li><a href="sl/proge/" class="menu-link" id="races-button">Proge</a></li>
-				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Prijava</a></li>
-				<li><a href="sl/o-nas" class="menu-link">O nas</a></li>
-				<li><a href="sl/kontakt" class="menu-link">Kontakt</a></li>
-				<li>
-					<a href="/en" class="language-switch menu-link">EN</a>
-					<span>/</span>					
-					<a href="/it" class="language-switch menu-link">IT</a>
-				</li>
-			</ul>
-		</div>
-	</header>
-	<!--Showcase image-->
-	<section id="showcase">
-		<div class="hero-image">
-			<img src="./assets/images/showcase-1-m.jpg" 
-				srcset="./assets/images/showcase-1-m.jpg 650w,
-				./assets/images/showcase-1.jpg 750w"
-				sizes="100vw"
-				alt="Tek treh vrhov - hero image">
-			<div class="text-wrap grid">
-				<span class="big-headline content-wrap">
-					Tek treh vrhov
-				</span>
-			</div>
+      <ul class="menu-content">
+        <li><a href="sl/info" class="menu-link">Info</a></li>
+        <li><a href="sl/proge/" class="menu-link" id="races-button">Proge</a></li>
+        <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Prijava</a></li>
+        <li><a href="sl/o-nas" class="menu-link">O nas</a></li>
+        <li><a href="sl/kontakt" class="menu-link">Kontakt</a></li>
+        <li>
+          <a href="/en" class="language-switch menu-link">EN</a>
+          <span>/</span>
+          <a href="/it" class="language-switch menu-link">IT</a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <!--Showcase image-->
+  <section id="showcase">
+    <div class="hero-image">
+      <img src="./assets/images/showcase-1-m.jpg" srcset="./assets/images/showcase-1-m.jpg 650w,
+				./assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Tek treh vrhov - hero image">
+      <div class="text-wrap grid">
+        <span class="big-headline content-wrap">
+          Tek treh vrhov
+        </span>
+      </div>
 
-		</div>
-	</section>
+    </div>
+  </section>
 
-	<!--Main-->
-	<main id="main">
-		<!--headline-->
-		<div class="headline small-headline ">
-			<div class="text-wrap">
-				<span class="headline-text">
-					Tek treh vrhov
-				</span>
-			</div>
-		</div>
+  <!--Main-->
+  <main id="main">
+    <!--headline-->
+    <div class="headline small-headline ">
+      <div class="text-wrap">
+        <span class="headline-text">
+          Tek treh vrhov
+        </span>
+      </div>
+    </div>
 
-		<!--section-B-->
-		<section class="section-b grid">
-			<div class="content-wrap center">
-				<h1 class="content-title">Tek med preteklostjo in prihodnostjo</h1>
-				<p class="landing-page-text">
-					Sabotin, Škabrijel in Sveta Gora so v samem središču našega doživetja. Vzpetine, ki so nekoč
-					ločevale, nas danes združujejo. Čez njihove vrhove smo postavili tri proge. Ste že izbrali svojo?
-				</p>
-			</div>
-		</section>
+    <!--section-B-->
+    <section class="section-b grid">
+      <div class="content-wrap center">
+        <h1 class="content-title">Tek med preteklostjo in prihodnostjo</h1>
+        <p class="landing-page-text">
+          Sabotin, Škabrijel in Sveta Gora so v samem središču našega doživetja. Vzpetine, ki so nekoč
+          ločevale, nas danes združujejo. Čez njihove vrhove smo postavili tri proge. Ste že izbrali svojo?
+        </p>
+      </div>
+    </section>
 
-		<!--section-A-->
-		<section class="section-a">
-			<ul class="image-grid">
-				<li id="race-1">
-					<a href="./sl/proge/goriski-tek">
-						<div class="card-content">
-							<h1 class="card-title">Goriški tek</h1>
-							<p> 4, 10 in 15 km |
-								Dobrodelni tek
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-2">
-					<a href="./sl/proge/go1v-12km">
-						<div class="card-content">
-							<h1 class="card-title">Go1V</h1>
-							<p> 12 km | 700 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-3">
-					<a href="./sl/proge/go3v-28km">
-						<div class="card-content">
-							<h1 class="card-title">Go3V</h1>
-							<p> 28 km | 1675 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-4">
-					<a href="./sl/proge/ultra-58km">
-						<div class="card-content">
-							<h1 class="card-title">Počasna a drzna ultra</h1>
-							<p> 58 km | 2864 m
-							</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</section>
+    <!--section-A-->
+    <section class="section-a">
+      <div class="content-wrap">
+        <ul class="image-grid">
+          <li id="race-1">
+            <a href="./sl/proge/goriski-tek">
+              <div class="card-content">
+                <h1 class="card-title">Goriški tek</h1>
+                <p> 4, 10 in 15 km |
+                  Dobrodelni tek
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-2">
+            <a href="./sl/proge/go1v-12km">
+              <div class="card-content">
+                <h1 class="card-title">Go1V</h1>
+                <p> 12 km | 700 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-3">
+            <a href="./sl/proge/go3v-28km">
+              <div class="card-content">
+                <h1 class="card-title">Go3V</h1>
+                <p> 28 km | 1675 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-4">
+            <a href="./sl/proge/ultra-58km">
+              <div class="card-content">
+                <h1 class="card-title">Počasna a drzna ultra</h1>
+                <p> 58 km | 2864 m
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
 
-		<!--section-C-->
-		<section class="section-c grid center">
-			<div class="content-wrap about">
-				<p class="landing-page-text">
-					Kliknite
-					<a href="sl/info">Info</a> ali pa si preberite
-					<a href="sl/o-nas">O nas</a>, če želite izvedeti več o dogodku.
-					<br>Niste našli kar ste iskali?
-					<a href="sl/kontakt">Pišite nam</a> in z veseljem vam bomo odgovorili.</p>
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
+      </div>
+    </section>
 
-		</section>
-	</main>
+    <!--section-C-->
+    <section class="section-c grid center">
+      <div class="content-wrap about">
+        <p class="landing-page-text">
+          Kliknite
+          <a href="sl/info">Info</a> ali pa si preberite
+          <a href="sl/o-nas">O nas</a>, če želite izvedeti več o dogodku.
+          <br>Niste našli kar ste iskali?
+          <a href="sl/kontakt">Pišite nam</a> in z veseljem vam bomo odgovorili.</p>
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
 
-	<!--Footer-->
-	<footer id="main-footer" class="grid">
-		<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-				Winkler</a></div>
-	</footer>
+    </section>
+  </main>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Footer-->
+  <footer id="main-footer" class="grid">
+    <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+        Winkler</a></div>
+  </footer>
+
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
