--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -2,143 +2,146 @@
 <html lang="sl">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov | Gare</title>
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
+  <meta name="description"
+    content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+  <title>Tek treh vrhov | Gare</title>
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/it" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
-			<ul class="menu-content">
-				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
-				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Iscrizioni</a></li>
-				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
-				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li>
-					<a href="/sl/proge" class="language-switch menu-link">SI</a>
-					<span>/</span>
-					<a href="/en/races" class="language-switch menu-link">EN</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/it" id="logo">T3V</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
+      <ul class="menu-content">
+        <li><a href="/it/informazioni" class="menu-link">Info</a></li>
+        <li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+        <li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Iscrizioni</a></li>
+        <li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
+        <li><a href="/it/contatti" class="menu-link">Contatti</a></li>
+        <li>
+          <a href="/sl/proge" class="language-switch menu-link">SI</a>
+          <span>/</span>
+          <a href="/en/races" class="language-switch menu-link">EN</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<div class="flex-box">
-		<!--Showcase image-->
-		<section>
-			<div class="showcase-image">
-				<img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - races" class="image-center">
-				<div class="text-wrap grid">
-					<span class="showcase-title content-wrap">
-						Gare
-					</span>
-				</div>
-			</div>
-		</section>
-		<!--section-A-->
-		<!--section-A-->
-		<section class="section-a flex-item">
-			<ul class="image-grid">
-				<li class="content-wrap">
-					<p class="opening">Sei un corridore esperto, un corridore amatoriale o stai solo cercando nuove esperienze? C'è una gara adatta a tutti voi! Dai un'occhiata ai percorsi che abbiamo preparato per te.</p>
-				</li>
-				<li id="race-1">
-					<a href="./goriski-tek">
-						<div class="card-content">
-							<h1 class="card-title">Goriški tek</h1>
-							<p> 4, 10 in 15 km |
-								corsa di beneficenza 
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-2">
-					<a href="./go1v-12km">
-						<div class="card-content">
-							<h1 class="card-title">Go1V</h1>
-							<p> 12 km | 700 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-3">
-					<a href="./go3v-28km">
-						<div class="card-content">
-							<h1 class="card-title">Go3V</h1>
-							<p> 28 km | 1675 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-4">
-					<a href="./ultra-58km">
-						<div class="card-content">
-							<h1 class="card-title">Počasna a drzna ultra</h1>
-							<p> 58 km | 2864 m
-							</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</section>
+  <div class="flex-box">
+    <!--Showcase image-->
+    <section>
+      <div class="showcase-image">
+        <img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - races" class="image-center">
+        <div class="text-wrap grid">
+          <span class="showcase-title content-wrap">
+            Gare
+          </span>
+        </div>
+      </div>
+    </section>
+    <!--section-A-->
+    <!--section-A-->
+    <section class="section-a flex-item">
+      <div class="content-wrap">
+        <ul class="image-grid">
+          <li>
+            <p class="opening">Sei un corridore esperto, un corridore amatoriale o stai solo cercando nuove esperienze?
+              C'è una gara adatta a tutti voi! Dai un'occhiata ai percorsi che abbiamo preparato per te.</p>
+          </li>
+          <li id="race-1">
+            <a href="./goriski-tek">
+              <div class="card-content">
+                <h1 class="card-title">Goriški tek</h1>
+                <p> 4, 10 in 15 km |
+                  corsa di beneficenza
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-2">
+            <a href="./go1v-12km">
+              <div class="card-content">
+                <h1 class="card-title">Go1V</h1>
+                <p> 12 km | 700 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-3">
+            <a href="./go3v-28km">
+              <div class="card-content">
+                <h1 class="card-title">Go3V</h1>
+                <p> 28 km | 1675 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-4">
+            <a href="./ultra-58km">
+              <div class="card-content">
+                <h1 class="card-title">Počasna a drzna ultra</h1>
+                <p> 58 km | 2864 m
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c" class="grid">
-			<div class="content-wrap">
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
-		</section>
+    <!--section-C-->
+    <section class="section-c" class="grid">
+      <div class="content-wrap">
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
+    </section>
 
-		<!--Footer-->
-		<footer id="main-footer" class="grid">
-			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-					Winkler</a></div>
-		</footer>
-	</div>
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+      <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+          Winkler</a></div>
+    </footer>
+  </div>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
