--- a/it/index.html
+++ b/it/index.html
@@ -2,174 +2,175 @@
 <html lang="it">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-		gtag('config', 'UA-157606098-2');
-	</script>
+    gtag('config', 'UA-157606098-2');
+  </script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
-	<meta name="description"
-		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-	<title>Tek treh vrhov 2020</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
+  <meta name="description"
+    content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+  <title>Tek treh vrhov 2020</title>
 
-	<!--Styles-->
-	<link rel="stylesheet" href="/styles/main.css">
-	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+  <!--Styles-->
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<!--Navigation bar-->
-	<header id="navigation-bar">
-		<div class="home-container">
-			<a href="/" id="logo">T3V</a>
-		</div>
-		<div class="menu-icon-container">
-			<button class="menu-icon" data-target="menu">
-				<i class="fas fa-bars" id="menu-button"></i>
-			</button>
-		</div>
-		<!--Menu content-->
-		<div id="menu">
-			<a id="close-button">&times;</a>
+  <!--Navigation bar-->
+  <header id="navigation-bar">
+    <div class="home-container">
+      <a href="/" id="logo">T3V</a>
+    </div>
+    <div class="menu-icon-container">
+      <button class="menu-icon" data-target="menu">
+        <i class="fas fa-bars" id="menu-button"></i>
+      </button>
+    </div>
+    <!--Menu content-->
+    <div id="menu">
+      <a id="close-button">&times;</a>
 
-			<ul class="menu-content">
-				<li><a href="informazioni" class="menu-link">Info</a></li>
-				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
-						class="menu-link">Iscrizioni</a></li>
-				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
-				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li>
-					<a href="/" class="language-switch menu-link">SI</a>
-					<span>/</span>					
-					<a href="/en" class="language-switch menu-link">EN</a>
-				</li>
-			</ul>
-		</div>
-	</header>
+      <ul class="menu-content">
+        <li><a href="informazioni" class="menu-link">Info</a></li>
+        <li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
+        <li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
+            class="menu-link">Iscrizioni</a></li>
+        <li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
+        <li><a href="contatti" class="menu-link">Contatti</a></li>
+        <li>
+          <a href="/" class="language-switch menu-link">SI</a>
+          <span>/</span>
+          <a href="/en" class="language-switch menu-link">EN</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-	<!--Showcase image-->
-	<section id="showcase">
-		<div class="hero-image">
-			<img src="../assets/images/showcase-1-m.jpg" 
-				srcset="../assets/images/showcase-1-m.jpg 650w,
-				../assets/images/showcase-1.jpg 750w"
-				sizes="100vw"
-				alt="Tek treh vrhov - hero image">
-			<div class="text-wrap grid">
-				<span class="big-headline content-wrap">
-					Tek treh vrhov
-				</span>
-			</div>
-		</div>
-	</section>
+  <!--Showcase image-->
+  <section id="showcase">
+    <div class="hero-image">
+      <img src="../assets/images/showcase-1-m.jpg" srcset="../assets/images/showcase-1-m.jpg 650w,
+				../assets/images/showcase-1.jpg 750w" sizes="100vw" alt="Tek treh vrhov - hero image">
+      <div class="text-wrap grid">
+        <span class="big-headline content-wrap">
+          Tek treh vrhov
+        </span>
+      </div>
+    </div>
+  </section>
 
-	<!--Main-->
-	<main id="main">
+  <!--Main-->
+  <main id="main">
 
-		<!--headline-->
-		<div class="headline small-headline ">
-			<div class="text-wrap">
-				<span class="headline-text">
-					Tek treh vrhov
-				</span>
-			</div>
-		</div>
+    <!--headline-->
+    <div class="headline small-headline ">
+      <div class="text-wrap">
+        <span class="headline-text">
+          Tek treh vrhov
+        </span>
+      </div>
+    </div>
 
-		<!--section-B-->
-		<section class="section-b grid">
-			<div class="content-wrap center">
-				<h1 class="content-title">Correre tra il passato e il futuro</h1>
-				<p class="landing-page-text">
-					Vi proponiamo 3 gare che si svolgono lungo i sentieri del Sabotino, Montesanto e San Gabriele. I sentieri che una volta separavano i popoli adesso li uniscono. Tre magnifiche gare, per tutti i gusti: hai già scelto la tua?
+    <!--section-B-->
+    <section class="section-b grid">
+      <div class="content-wrap center">
+        <h1 class="content-title">Correre tra il passato e il futuro</h1>
+        <p class="landing-page-text">
+          Vi proponiamo 3 gare che si svolgono lungo i sentieri del Sabotino, Montesanto e San Gabriele. I sentieri che
+          una volta separavano i popoli adesso li uniscono. Tre magnifiche gare, per tutti i gusti: hai già scelto la
+          tua?
 
-				</p>
-			</div>
-		</section>
+        </p>
+      </div>
+    </section>
 
-		<!--section-A-->
-		<section class="section-a">
-			<ul class="image-grid">
-				<li id="race-1">
-					<a href="./gare/goriski-tek">
-						<div class="card-content">
-							<h1 class="card-title">Goriški tek</h1>
-							<p> 4, 10 in 15 km |
-								corsa di beneficenza 
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-2">
-					<a href="./gare/go1v-12km">
-						<div class="card-content">
-							<h1 class="card-title">Go1V</h1>
-							<p> 12 km | 700 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-3">
-					<a href="./gare/go3v-28km">
-						<div class="card-content">
-							<h1 class="card-title">Go3V</h1>
-							<p> 28 km | 1675 m
-							</p>
-						</div>
-					</a>
-				</li>
-				<li id="race-4">
-					<a href="./gare/ultra-58km">
-						<div class="card-content">
-							<h1 class="card-title">Počasna a drzna ultra</h1>
-							<p> 58 km | 2864 m
-							</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</section>
+    <!--section-A-->
+    <section class="section-a">
+      <div class="content-wrap">
+        <ul class="image-grid">
+          <li id="race-1">
+            <a href="./gare/goriski-tek">
+              <div class="card-content">
+                <h1 class="card-title">Goriški tek</h1>
+                <p> 4, 10 in 15 km |
+                  corsa di beneficenza
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-2">
+            <a href="./gare/go1v-12km">
+              <div class="card-content">
+                <h1 class="card-title">Go1V</h1>
+                <p> 12 km | 700 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-3">
+            <a href="./gare/go3v-28km">
+              <div class="card-content">
+                <h1 class="card-title">Go3V</h1>
+                <p> 28 km | 1675 m
+                </p>
+              </div>
+            </a>
+          </li>
+          <li id="race-4">
+            <a href="./gare/ultra-58km">
+              <div class="card-content">
+                <h1 class="card-title">Počasna a drzna ultra</h1>
+                <p> 58 km | 2864 m
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-		<!--section-C-->
-		<section class="section-c grid center">
-			<div class="content-wrap about">
-				<p>Vuoi saperne di più sull'evento?
-					Fai clic su 
-					<a href="informazioni">informazioni</a> o
-					<a href="chi-siamo">leggi di più su di noi</a>.
-					<br><a href="contatti">Contattaci</a> e saremo felici di risponderti.
-				</p>
-				<div class="icon-container">
-					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-						data-target="menu">
-						<i class="fab fa-instagram"></i></a>
-					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-						<i class="fab fa-facebook-square"></i></a>
-				</div>
-			</div>
-		</section>
-	</main>
+    <!--section-C-->
+    <section class="section-c grid center">
+      <div class="content-wrap about">
+        <p>Vuoi saperne di più sull'evento?
+          Fai clic su
+          <a href="informazioni">informazioni</a> o
+          <a href="chi-siamo">leggi di più su di noi</a>.
+          <br><a href="contatti">Contattaci</a> e saremo felici di risponderti.
+        </p>
+        <div class="icon-container">
+          <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+            data-target="menu">
+            <i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+            <i class="fab fa-facebook-square"></i></a>
+        </div>
+      </div>
+    </section>
+  </main>
 
-	<!--Footer-->
-	<footer id="main-footer" class="grid">
-		<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-				Winkler</a></div>
-	</footer>
+  <!--Footer-->
+  <footer id="main-footer" class="grid">
+    <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+        Winkler</a></div>
+  </footer>
 
-	<!--Scripts-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+  <!--Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
