add transition style to buttons

--- a/en/about.html
+++ b/en/about.html
@@ -77,7 +77,7 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="main-text">Tek treh vrhov (T3V) started as all good things do. With a group of friends doing
+				<p class="main-text pt-1">Tek treh vrhov (T3V) started as all good things do. With a group of friends doing
 					together what they like the most. We love to run. Especially when the trail goes uphill. That is why
 					we decided to bring you a unique running experience. From the picturesque ridge of Mt. Sabotin and
 					forest paths on Mt. Škabrijel to the cavern of Sveta Gora and stunning views of the Soča river. We
