--- a/en/races/index.html
+++ b/en/races/index.html
@@ -71,9 +71,9 @@
     </section>
     <!--section-A-->
     <section class="section-a flex-item">
-      <div>
+      <div class="content-wrap">
         <ul class="image-grid">
-          <li class="content-wrap">
+          <li>
             <p class="opening">Are you a seasoned trail runner, a weekend warior or just eager to try
               something new? We' ve got you
               covered! Check out the races we have prepared for you.</p>
