--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -77,7 +77,7 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="main-text">La Corsa della tre cime (T3V) è iniziata, come tutte le cose belle, dalla condivisione di una passione comune di un gruppo di amici, uniti dalla gioia di correre lungo i sentieri del nostro territorio. Ecco perché abbiamo deciso di offrirti un'esperienza di corsa unica:
+				<p class="main-text pt-1">La Corsa della tre cime (T3V) è iniziata, come tutte le cose belle, dalla condivisione di una passione comune di un gruppo di amici, uniti dalla gioia di correre lungo i sentieri del nostro territorio. Ecco perché abbiamo deciso di offrirti un'esperienza di corsa unica:
 					I percorsi sono stati disegnati lungo la cresta panoramica del Sabotino, dal quale potrai godere del verde smeraldo caratteristico dell’Isonzo-Soča, attraverso i sentieri forestali del monte San Gabriele e attraverso la galleria del Montesanto. Il nostro obiettivo è stato quello di catturare in pochi km tutta la varietà del nostro territorio ... e così è nata la Corsa delle tre cime.	
 				</p>
 			</div>
