--- a/sl/o-nas.html
+++ b/sl/o-nas.html
@@ -77,7 +77,7 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="main-text">Tek treh vrhov (T3V) se je začel kot vse dobre strvari. Z ljudmi ki jih je družila
+				<p class="main-text pt-1">Tek treh vrhov (T3V) se je začel kot vse dobre strvari. Z ljudmi ki jih je družila
 					skupna strast. Nas je združilo veselje do teka. Še posebej ko nas pot vodi v hrib. Zato smo se
 					odločili, da vam ponudimo edinstveno tekaško izkušnjo. Proge smo postavili čez slikovit greben
 					Sabotina s pogledom na reko Sočo, skozi gozdne poti Škabrijela in kaverno na Sveti Gori. Želeli smo
