remove renato from contacts

--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -152,9 +152,9 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">+ Contact</a>
 						<ul class="inner  top-padding">
-							<li>Renato Lešnik</li>
-							<li>+386 (0)70879914</li>
-							<li><a href="mailto:renato.lesnik@gmail.com ">renato.lesnik@gmail.com</a></li>
+							<li>Miha Repič</li>
+							<li>+386 (0)68187250</li>
+							<li><a href="mailto:mihamrr@gmail.com ">mihamrr@gmail.com</a></li>
 						</ul>
 					</li>
 				</ul>
